# tumopp

./: .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  Doxyfile  Makefile  NAMESPACE  README.md  annotated.html  cell.cpp  cell.h  cell.hpp  classes.html  classtumopp_1_1_benchmark-members.html  classtumopp_1_1_benchmark.html  classtumopp_1_1_cell-members.html  classtumopp_1_1_cell.html  classtumopp_1_1_coord-members.html  classtumopp_1_1_coord.html  classtumopp_1_1_hexagonal-members.html  classtumopp_1_1_hexagonal.html  classtumopp_1_1_moore-members.html  classtumopp_1_1_moore.html  classtumopp_1_1_neumann-members.html  classtumopp_1_1_neumann.html  classtumopp_1_1_simulation-members.html  classtumopp_1_1_simulation.html  classtumopp_1_1_tissue-members.html  classtumopp_1_1_tissue.html  classtumopp_1_1exit__success-members.html  classtumopp_1_1exit__success.html  configure  coord.hpp  demography.R  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  early.R  functions.html  functions_func.html  functions_rela.html  (+33 more)
.github/workflows/: build.yaml
R/: RcppExports.R  coord.R  diversity.R  extract.R  frequency.R  graph.R  init.R  math.R  morphology.R  plot-rgl.R  plot.R  population.R  radius.R  read.R  sample.R  sphere.R  summarize.R  tumopp.R  tumorr.R  zzz.R
demo/: 00Index  coord.R  early.R  phylogeny.R  rgl.R  run.R  sample.R
docs/: annotated.html  benchmark_8hpp.html  benchmark_8hpp_source.html  cell_8cpp.html  cell_8cpp_source.html  cell_8hpp.html  cell_8hpp_source.html  classes.html  classtumopp_1_1_benchmark-members.html  classtumopp_1_1_benchmark.html  classtumopp_1_1_cell-members.html  classtumopp_1_1_cell.html  classtumopp_1_1_coord-members.html  classtumopp_1_1_coord.html  classtumopp_1_1_hexagonal-members.html  classtumopp_1_1_hexagonal.html  classtumopp_1_1_moore-members.html  classtumopp_1_1_moore.html  classtumopp_1_1_neumann-members.html  classtumopp_1_1_neumann.html  classtumopp_1_1_simulation-members.html  classtumopp_1_1_simulation.html  classtumopp_1_1_tissue-members.html  classtumopp_1_1_tissue.html  classtumopp_1_1equal__shptr__cell-members.html  classtumopp_1_1equal__shptr__cell.html  coord_8hpp.html  coord_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  group__params.html  hierarchy.html  (+38 more)
inst/: CITATION
man/: coord.Rd  cpp.Rd  cpp_tumopp.Rd  diversity.Rd  extract.Rd  first_ancestors.Rd  frequency.Rd  graph.Rd  hex.Rd  maxabs.Rd  morphology.Rd  plot-animation.Rd  plot-igraph.Rd  plot-rgl.Rd  plot-section.Rd  plot.Rd  population.Rd  radius.Rd  read.Rd  run_tumopp.Rd  run_tumopp_raw.Rd  sample.Rd  sphere.Rd  summarize.Rd  tumopp.Rd  tumopp_test.Rd  tumorr.Rd
r/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure
r/R/: RcppExports.R  coord.R  frequency.R  graph.R  morphology.R  ms.R  plot-rgl.R  plot.R  population.R  radius.R  read.R  sample-combn.R  sample.R  summarize.R  tumopp.R  zzz.R
r/demo/: 00Index  coord.R  early.R  phylogeny.R  rgl.R  run.R  sample.R
r/inst/: CITATION
r/man/: coord.Rd  frequency.Rd  graph.Rd  morphology.Rd  ms.Rd  plot-biopsy.Rd  plot-igraph.Rd  plot.Rd  population.Rd  radius.Rd  sample-combn.Rd  sample.Rd  summarize.Rd  tumopp.Rd  tumorr.Rd
r/src/: CMakeLists.txt  RcppExports.cpp  run.cpp
r/vignettes/: tumopp.Rmd
src/: .gitignore  CMakeLists.txt  Makevars  Makevars.in  RcppExports.cpp  benchmark.hpp  cell.cpp  cell.hpp  coord.cpp  coord.hpp  main.cpp  random.hpp  random.hpp.in  run.cpp  simulation.cpp  simulation.hpp  tissue.cpp  tissue.hpp  version.cpp.in  version.hpp  version.hpp.in
test/: .clang_complete  CMakeLists.txt  cell.cpp  cli.sh  coord.cpp  tissue.cpp
